fixed hero form having a gap at start

--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@ img {
 .hero__form-flex {
   display: flex;
   align-items: stretch;
-  justify-content: center;
+  justify-content: space-between;
   gap: 1rem;
   padding: 1rem 0;
 }
